<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_second"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".presentation.fragment.filter.CharacterFilterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_title_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_primary" />

    <EditText
        android:id="@+id/filter_episode_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_second" />

    <Button
        android:id="@+id/button_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/button_filter_episodes"
        android:textColor="@color/button_text_color" />

</LinearLayout>